# AgenticAIWorkspace

./: .gitignore  pyproject.toml  requirements.txt
1-langgraph Basics/: 1-simplegraph.ipynb  2-chatbot.ipynb  3-DataclassStateSchema.ipynb  4-pydantic.ipynb  5-chainLangGraph.ipynb  6-chatbot_with_multiple_tools.ipynb  7-ReActAgents.ipynb  8-streaming.ipynb
3-Debugging/3-Debugging/: langgraph.json  openai_agent.py
4-workflows/: 1-prompting_chaining.ipynb  2-parallelization.ipynb  3-Routing.ipynb  4-orchestrator-worker.ipynb  5-Evaluator-optimizer.ipynb
5-HumanintheLoop/: 1-Humanintheloop.ipynb
6-RAGs/: 1-AgenticRAG.ipynb  2-CorrectiveRag.ipynb  3-AdaptiveRag.ipynb
