[project]
name = "agenticaiworkspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arxiv>=2.3.1",
    "faiss-cpu>=1.13.2",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.5",
    "langchain-groq>=1.1.1",
    "langchain-openai>=1.1.6",
    "langchainhub>=0.1.21",
    "langgraph>=1.0.5",
    "langgraph-cli[inmem]>=0.4.11",
    "python-dotenv>=1.2.1",
    "wikipedia>=1.4.0",
]
